--- a/examples/get-started/hello_world/CMakeLists.txt
+++ b/examples/get-started/hello_world/CMakeLists.txt
@@ -3,4 +3,7 @@
 cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+add_compile_definitions(configUSE_POSIX_ERRNO=1)
+add_compile_definitions(configUSE_APPLICATION_TASK_TAG=1)
+
 project(hello-world)
